# world-class

./: CMakeLists.txt  Makefile
include/: world.hpp
sptk/: SPTK.h
src/: conversion.hpp
test/: test.cpp
tools/: audioio.cpp  audioio.hpp
